<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo1"
        android:contentDescription="@string/picture"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/search_info"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:onClick="sendButton"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/searchEditText"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World123!"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/infoButton"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="Info"
        android:visibility="invisible"
        android:onClick="sendButton"
        android:layout_marginStart="8dp"
        android:layout_marginTop="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/modifyButton"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="Modify"
        android:visibility="invisible"
        android:onClick="sendButton"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoButton"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="Add"
        android:visibility="visible"
        android:onClick="sendButton"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modifyButton"/>




</android.support.constraint.ConstraintLayout>