<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cityinfoEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/city_info"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTextView" />

    <TextView
        android:id="@+id/coordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coord_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityinfoEditText" />

    <EditText
        android:id="@+id/coordinfoEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/coord_info"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordTextView" />

    <TextView
        android:id="@+id/tempTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinfoEditText" />

    <EditText
        android:id="@+id/tempinfoEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/temp_info"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempTextView" />

    <TextView
        android:id="@+id/humidTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humid_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tempinfoEditText" />

    <EditText
        android:id="@+id/humidinfoEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/humid_info"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidTextView" />

    <TextView
        android:id="@+id/pressureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidinfoEditText" />

    <EditText
        android:id="@+id/pressureinfoEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/pressure_info"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressureTextView" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/save"
        android:onClick="sendButton"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>